--- a/categorias.html
+++ b/categorias.html
@@ -26,12 +26,14 @@
   </head>
   <body>
     <div class="main">
-      <header class="bb">
-        <div class="bb header">
-          <div class="bb logo">
-            <a href="index.html"><img src="img/logo.png" alt="Viña Colchagua" /></a>
+      <header>
+        <div class="header">
+          <div class="logo">
+            <a href="index.html"
+              ><img src="img/logo.png" alt="Viña Colchagua"
+            /></a>
           </div>
-          <nav class="bb menu">
+          <nav class="menu">
             <ul>
               <li><a href="#">Inicio</a></li>
               <li><a href="categorias.html">Tintos</a></li>
@@ -41,23 +43,76 @@
               <li><a href="#">Contacto</a></li>
             </ul>
           </nav>
-          <div class="bb sesion">
+          <div class="sesion">
             <div>
-              <a href="carro.html"><img src="img/shopping_cart.png" alt="" /></a>
+              <a href="carro.html"
+                ><img src="img/shopping_cart.png" alt=""
+              /></a>
             </div>
             <div><span>0</span></div>
             <div>
               <a href="#"><img src="img/person_outline.png" alt="" /></a>
             </div>
           </div>
+          <div class="navbar navbar-light bg-white">
+            <button
+              class="navbar-toggler bg-light"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#n_bar"
+              aria-controls="n_bar"
+              aria-expanded="false"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
         </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+          <div class="container">
+            <div class="collapse navbar-collapse" id="n_bar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#"
+                    ><img src="img/person_outline.png" alt="" />Iniciar
+                    sesión</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="carro.html"
+                    ><img src="img/shopping_cart.png" alt="" />0 productos</a
+                  >
+                </li>
+                <li class="nav-item">-</li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="categorias.html">Tintos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Blancos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Ensamblajes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Espumantes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </header>
-      <section class="bb breadcrumbs">
+      <section class="breadcrumbs">
         <a href="#">Inicio</a> / Tintos
       </section>
 
       <section class="categoria_grilla">
-        <section class="bb menu_categoria">
+        <section class="menu_categoria">
           <div class="padding">
             <div class="list-group">
               <a href="#" class="list-group-item principal">Tintos</a>
@@ -81,7 +136,7 @@
           </div>
         </section>
 
-        <section class="bb ofertas">
+        <section class="ofertas">
           <div class="texto_seccion"><span>Tintos</span></div>
           <div class="contenedor_categoria">
             <div class="oferta">
@@ -188,7 +243,7 @@
         </section>
       </section>
 
-      <section class="bb marcas">
+      <section class="marcas">
         <div class="container h-100">
           <div class="slider">
             <div class="slide-track-1">
@@ -230,7 +285,7 @@
         </div>
       </section>
 
-      <footer class="bb footer">
+      <footer class="footer">
         <div class="logo">
           <img src="img/logo_footer.png" alt="Viña Colchagua" />
         </div>
