Correciones generales HTML/CSS v01

--- a/detalle.html
+++ b/detalle.html
@@ -83,9 +83,8 @@
                     ><img src="img/shopping_cart.png" alt="" />0 productos</a
                   >
                 </li>
-                <li class="nav-item">-</li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Inicio</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="categorias.html">Tintos</a>
@@ -108,7 +107,7 @@
         </nav>
       </header>
       <section class="breadcrumbs">
-        <a href="#">Inicio</a> / <a href="#">Tintos</a> / Vino Orgánico Veramonte Reserva Cepas
+        <a href="index.html">Inicio</a> / <a href="categorias.html">Tintos</a> / Vino Orgánico Veramonte Reserva Cepas
       </section>
 
       <section class="detalle">
@@ -248,12 +247,12 @@
 
       <footer class="footer">
         <div class="logo">
-          <img src="img/logo_footer.png" alt="Viña Colchagua" />
+          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
         </div>
         <div class="menu">
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Tintos</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="categorias.html">Tintos</a></li>
             <li><a href="#">Blancos</a></li>
             <li><a href="#">Ensamblajes</a></li>
             <li><a href="#">Espumantes</a></li>
