--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <nav class="menu">
             <ul>
-              <li><a href="#">Inicio</a></li>
+              <li><a href="index.html">Inicio</a></li>
               <li><a href="categorias.html">Tintos</a></li>
               <li><a href="#">Blancos</a></li>
               <li><a href="#">Ensamblajes</a></li>
@@ -83,9 +83,8 @@
                     ><img src="img/shopping_cart.png" alt="" />0 productos</a
                   >
                 </li>
-                <li class="nav-item">-</li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Inicio</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="categorias.html">Tintos</a>
@@ -250,12 +249,12 @@
 
       <footer class="footer">
         <div class="logo">
-          <img src="img/logo_footer.png" alt="Viña Colchagua" />
+          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
         </div>
         <div class="menu">
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Tintos</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="categorias.html">Tintos</a></li>
             <li><a href="#">Blancos</a></li>
             <li><a href="#">Ensamblajes</a></li>
             <li><a href="#">Espumantes</a></li>
