--- a/categorias.html
+++ b/categorias.html
@@ -35,7 +35,7 @@
           </div>
           <nav class="menu">
             <ul>
-              <li><a href="#">Inicio</a></li>
+              <li><a href="index.html">Inicio</a></li>
               <li><a href="categorias.html">Tintos</a></li>
               <li><a href="#">Blancos</a></li>
               <li><a href="#">Ensamblajes</a></li>
@@ -83,9 +83,8 @@
                     ><img src="img/shopping_cart.png" alt="" />0 productos</a
                   >
                 </li>
-                <li class="nav-item">-</li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Inicio</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="categorias.html">Tintos</a>
@@ -108,11 +107,11 @@
         </nav>
       </header>
       <section class="breadcrumbs">
-        <a href="#">Inicio</a> / Tintos
+        <a href="index.html">Inicio</a> / Tintos
       </section>
 
       <section class="categoria_grilla">
-        <section class="menu_categoria">
+        <div class="menu_categoria">
           <div class="padding">
             <div class="list-group">
               <a href="#" class="list-group-item principal">Tintos</a>
@@ -134,16 +133,16 @@
               <a href="#" class="list-group-item principal">Espumantes</a>
             </div>
           </div>
-        </section>
+        </div>
 
-        <section class="ofertas">
+        <div class="ofertas">
           <div class="texto_seccion"><span>Tintos</span></div>
           <div class="contenedor_categoria">
             <div class="oferta">
               <div class="foto_producto">
                 <img src="img/vino_01.png" alt="" />
               </div>
-              <span class="texto_producto"
+              <span class="texto_producto_categoria"
                 >Miguel Torres Gran Reserva Cabernet Sauvignon</span
               >
               <div class="texto_precio">
@@ -156,7 +155,7 @@
               <div class="foto_producto">
                 <img src="img/vino_02.png" alt="" />
               </div>
-              <span class="texto_producto">Salvaje Syrah</span>
+              <span class="texto_producto_categoria">Salvaje Syrah</span>
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
                 <span class="precio">$6.570</span>
@@ -167,7 +166,7 @@
               <div class="foto_producto">
                 <img src="img/vino_03.png" alt="" />
               </div>
-              <span class="texto_producto"
+              <span class="texto_producto_categoria"
                 >Vino Orgánico Veramonte Reserva Cepas</span
               >
               <div class="texto_precio">
@@ -180,7 +179,7 @@
               <div class="foto_producto">
                 <img src="img/vino_01.png" alt="" />
               </div>
-              <span class="texto_producto"
+              <span class="texto_producto_categoria"
                 >Miguel Torres Gran Reserva Cabernet Sauvignon</span
               >
               <div class="texto_precio">
@@ -193,7 +192,7 @@
               <div class="foto_producto">
                 <img src="img/vino_02.png" alt="" />
               </div>
-              <span class="texto_producto">Salvaje Syrah</span>
+              <span class="texto_producto_categoria">Salvaje Syrah</span>
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
                 <span class="precio">$6.570</span>
@@ -204,7 +203,7 @@
               <div class="foto_producto">
                 <img src="img/vino_03.png" alt="" />
               </div>
-              <span class="texto_producto"
+              <span class="texto_producto_categoria"
                 >Miguel Torres Gran Reserva Cabernet Sauvignon</span
               >
               <div class="texto_precio">
@@ -217,7 +216,7 @@
               <div class="foto_producto">
                 <img src="img/vino_02.png" alt="" />
               </div>
-              <span class="texto_producto"
+              <span class="texto_producto_categoria"
                 >Vino Orgánico Veramonte Reserva Cepas</span
               >
               <div class="texto_precio">
@@ -230,7 +229,7 @@
               <div class="foto_producto">
                 <img src="img/vino_03.png" alt="" />
               </div>
-              <span class="texto_producto"
+              <span class="texto_producto_categoria"
                 >Vino Orgánico Veramonte Reserva Cepas</span
               >
               <div class="texto_precio">
@@ -240,7 +239,7 @@
               <a href="detalle.html" class="caja_producto">ver producto</a>
             </div>
           </div>
-        </section>
+        </div>
       </section>
 
       <section class="marcas">
@@ -287,12 +286,12 @@
 
       <footer class="footer">
         <div class="logo">
-          <img src="img/logo_footer.png" alt="Viña Colchagua" />
+          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
         </div>
         <div class="menu">
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Tintos</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="categorias.html">Tintos</a></li>
             <li><a href="#">Blancos</a></li>
             <li><a href="#">Ensamblajes</a></li>
             <li><a href="#">Espumantes</a></li>
