Agrega fotos otras categorias v01

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
           </a>
           <a href="categorias.html">
             <div class="caja_categoria">Ensamblajes</div>
-            <img src="img/tintos.png" alt="" />
+            <img src="img/ensamblaje.png" alt="" />
           </a>
           <a href="categorias.html">
             <div class="caja_categoria">Espumantes</div>
-            <img src="img/blancos.png" alt="" />
+            <img src="img/espumante.png" alt="" />
           </a>
           <a href="categorias.html">
             <div class="caja_categoria">tintos</div>
@@ -139,11 +139,11 @@
           </a>
           <a href="categorias.html">
             <div class="caja_categoria">Ensamblajes</div>
-            <img src="img/tintos.png" alt="" />
+            <img src="img/ensamblaje.png" alt="" />
           </a>
           <a href="categorias.html">
             <div class="caja_categoria">Espumantes</div>
-            <img src="img/blancos.png" alt="" />
+            <img src="img/espumante.png" alt="" />
           </a>
         </div>
       </section>
