Correciones generales HTML/CSS v03

--- a/detalle.html
+++ b/detalle.html
@@ -107,7 +107,8 @@
         </nav>
       </header>
       <section class="breadcrumbs">
-        <a href="index.html">Inicio</a> / <a href="categorias.html">Tintos</a> / Vino Orgánico Veramonte Reserva Cepas
+        <a href="index.html">Inicio</a> / <a href="categorias.html">Tintos</a> /
+        Vino Orgánico Veramonte Reserva Cepas
       </section>
 
       <section class="detalle">
@@ -132,7 +133,8 @@
         </div>
         <div class="cantidad_carro">
           <div class="cantidad">
-            Cantidad: <input
+            Cantidad:
+            <input
               type="number"
               id="quantity"
               name="quantity"
@@ -146,7 +148,6 @@
           </div>
         </div>
       </section>
-
       <section class="ofertas">
         <div class="texto_seccion"><span>Ofertas Destacadas</span></div>
         <div class="contenedor_ofertas">
@@ -247,7 +248,9 @@
 
       <footer class="footer">
         <div class="logo">
-          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
+          <a href="index.html"
+            ><img src="img/logo_footer.png" alt="Viña Colchagua"
+          /></a>
         </div>
         <div class="menu">
           <ul>
