--- a/index.html
+++ b/index.html
@@ -246,10 +246,11 @@
           </div>
         </div>
       </section>
-
       <footer class="footer">
         <div class="logo">
-          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
+          <a href="index.html"
+            ><img src="img/logo_footer.png" alt="Viña Colchagua"
+          /></a>
         </div>
         <div class="menu">
           <ul>
