--- a/categorias.html
+++ b/categorias.html
@@ -109,32 +109,28 @@
       <section class="breadcrumbs">
         <a href="index.html">Inicio</a> / Tintos
       </section>
-
       <section class="categoria_grilla">
         <div class="menu_categoria">
-          <div class="padding">
+          <div class="list-group">
+            <a href="#" class="list-group-item principal">Tintos</a>
             <div class="list-group">
-              <a href="#" class="list-group-item principal">Tintos</a>
-              <div class="list-group">
-                <a href="#" class="list-group-item">Cabernet Sauvignon (18)</a>
-                <a href="#" class="list-group-item">Carmenere (13)</a>
-                <a href="#" class="list-group-item">Ensamblaje (13)</a>
-                <a href="#" class="list-group-item">Pinot Noir (8)</a>
-                <a href="#" class="list-group-item">Sauvignon Blanc (8)</a>
-                <a href="#" class="list-group-item">Chardonnay (7)</a>
-                <a href="#" class="list-group-item">Merlot (6)</a>
-                <a href="#" class="list-group-item">Rose (6)</a>
-                <a href="#" class="list-group-item">Syrah (2)</a>
-                <a href="#" class="list-group-item">Gewurztraminer (1)</a>
-                <a href="#" class="list-group-item">Malbec (1)</a>
-              </div>
-              <a href="#" class="list-group-item principal">Blancos</a>
-              <a href="#" class="list-group-item principal">Ensamblajes</a>
-              <a href="#" class="list-group-item principal">Espumantes</a>
+              <a href="#" class="list-group-item">Cabernet Sauvignon (18)</a>
+              <a href="#" class="list-group-item">Carmenere (13)</a>
+              <a href="#" class="list-group-item">Ensamblaje (13)</a>
+              <a href="#" class="list-group-item">Pinot Noir (8)</a>
+              <a href="#" class="list-group-item">Sauvignon Blanc (8)</a>
+              <a href="#" class="list-group-item">Chardonnay (7)</a>
+              <a href="#" class="list-group-item">Merlot (6)</a>
+              <a href="#" class="list-group-item">Rose (6)</a>
+              <a href="#" class="list-group-item">Syrah (2)</a>
+              <a href="#" class="list-group-item">Gewurztraminer (1)</a>
+              <a href="#" class="list-group-item">Malbec (1)</a>
             </div>
+            <a href="#" class="list-group-item principal">Blancos</a>
+            <a href="#" class="list-group-item principal">Ensamblajes</a>
+            <a href="#" class="list-group-item principal">Espumantes</a>
           </div>
         </div>
-
         <div class="ofertas">
           <div class="texto_seccion"><span>Tintos</span></div>
           <div class="contenedor_categoria">
@@ -286,7 +282,9 @@
 
       <footer class="footer">
         <div class="logo">
-          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
+          <a href="index.html"
+            ><img src="img/logo_footer.png" alt="Viña Colchagua"
+          /></a>
         </div>
         <div class="menu">
           <ul>
