Correciones generales HTML/CSS v03

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       <section class="breadcrumbs"></section>
       <section class="carrusel">
         <div class="img_carrusel"></div>
+        <div class="texto_carrusel">Descubre Viña Colchagua</div>
       </section>
       <section class="categorias">
         <div class="texto_seccion"><span>Categorias</span></div>
