Correciones realizadas en base a comentarios de tutora Macarena v01

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Viña Volchagua - Descubre Viña Colchagua">
+    <meta name="keywords" content="Tintos, Blancos, Ensamblajes, Espumantes">
     <title>Inicio - Viña Colchagua</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +27,7 @@
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-    <div class="main">
+    <main class="main">
       <header>
         <div class="header">
           <div class="logo">
@@ -36,7 +38,7 @@
           <nav class="menu">
             <ul>
               <li><a href="index.html">Inicio</a></li>
-              <li><a href="categorias.html">Tintos</a></li>
+              <li><a href="pages/categorias.html">Tintos</a></li>
               <li><a href="#">Blancos</a></li>
               <li><a href="#">Ensamblajes</a></li>
               <li><a href="#">Espumantes</a></li>
@@ -45,7 +47,7 @@
           </nav>
           <div class="sesion">
             <div>
-              <a href="carro.html"
+              <a href="pages/carro.html"
                 ><img src="img/shopping_cart.png" alt=""
               /></a>
             </div>
@@ -79,7 +81,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="carro.html"
+                  <a class="nav-link" href="pages/carro.html"
                     ><img src="img/shopping_cart.png" alt="" />0 productos</a
                   >
                 </li>
@@ -87,7 +89,7 @@
                   <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="categorias.html">Tintos</a>
+                  <a class="nav-link" href="pages/categorias.html">Tintos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Blancos</a>
@@ -109,99 +111,99 @@
       <section class="breadcrumbs"></section>
       <section class="carrusel">
         <div class="img_carrusel"></div>
-        <div class="texto_carrusel">Descubre Viña Colchagua</div>
+        <div class="texto_carrusel"><h1>Descubre Viña Colchagua</h1></div>
       </section>
       <section class="categorias">
-        <div class="texto_seccion"><span>Categorias</span></div>
+        <div class="texto_seccion"><span><h4>Categorias</h4></span></div>
         <div class="contenedor_categorias">
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">tintos</div>
             <img src="img/tintos.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">blancos</div>
             <img src="img/blancos.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">Ensamblajes</div>
             <img src="img/ensamblaje.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">Espumantes</div>
             <img src="img/espumante.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">tintos</div>
             <img src="img/tintos.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">blancos</div>
             <img src="img/blancos.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">Ensamblajes</div>
             <img src="img/ensamblaje.png" alt="" />
           </a>
-          <a href="categorias.html">
+          <a href="pages/categorias.html">
             <div class="caja_categoria">Espumantes</div>
             <img src="img/espumante.png" alt="" />
           </a>
         </div>
       </section>
       <section class="ofertas">
-        <div class="texto_seccion"><span>Ofertas Destacadas</span></div>
+        <div class="texto_seccion"><span><h4>Ofertas Destacadas</h4></span></div>
         <div class="contenedor_ofertas">
           <div class="oferta">
             <div class="foto_producto">
               <img src="img/vino_01.png" alt="" />
             </div>
-            <span class="texto_producto"
-              >Vino Orgánico Veramonte Reserva Cepas</span
+            <p class="texto_producto"
+              >Vino Orgánico Veramonte Reserva Cepas</p
             >
             <div class="texto_precio">
               <span class="texto">Precio:</span>
               <span class="precio">$6.570</span>
             </div>
-            <a href="detalle.html" class="caja_producto">ver producto</a>
+            <a href="pages/detalle.html" class="caja_producto">ver producto</a>
           </div>
           <div class="oferta">
             <div class="foto_producto">
               <img src="img/vino_01.png" alt="" />
             </div>
-            <span class="texto_producto"
-              >Vino Orgánico Veramonte Reserva Cepas</span
+            <p class="texto_producto"
+              >Vino Orgánico Veramonte Reserva Cepas</p
             >
             <div class="texto_precio">
               <span class="texto">Precio:</span>
               <span class="precio">$6.570</span>
             </div>
-            <a href="detalle.html" class="caja_producto">ver producto</a>
+            <a href="pages/detalle.html" class="caja_producto">ver producto</a>
           </div>
           <div class="oferta">
             <div class="foto_producto">
               <img src="img/vino_01.png" alt="" />
             </div>
-            <span class="texto_producto"
-              >Vino Orgánico Veramonte Reserva Cepas</span
+            <p class="texto_producto"
+              >Vino Orgánico Veramonte Reserva Cepas</p
             >
             <div class="texto_precio">
               <span class="texto">Precio:</span>
               <span class="precio">$6.570</span>
             </div>
-            <a href="detalle.html" class="caja_producto">ver producto</a>
+            <a href="pages/detalle.html" class="caja_producto">ver producto</a>
           </div>
           <div class="oferta">
             <div class="foto_producto">
               <img src="img/vino_01.png" alt="" />
             </div>
-            <span class="texto_producto"
-              >Vino Orgánico Veramonte Reserva Cepas</span
+            <p class="texto_producto"
+              >Vino Orgánico Veramonte Reserva Cepas</p
             >
             <div class="texto_precio">
               <span class="texto">Precio:</span>
               <span class="precio">$6.570</span>
             </div>
-            <a href="detalle.html" class="caja_producto">ver producto</a>
+            <a href="pages/detalle.html" class="caja_producto">ver producto</a>
           </div>
         </div>
       </section>
@@ -211,37 +213,37 @@
           <div class="slider">
             <div class="slide-track-1">
               <div class="slide">
-                <img src="img/marcas/cs.png" alt="" loading="lazy" />
+                <img src="img/marcas/cs.png" alt="Casa Silva" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/bta.png" alt="" loading="lazy" />
+                <img src="img/marcas/bta.png" alt="Bodega Trivento Argentina" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/carmen.png" alt="" loading="lazy" />
+                <img src="img/marcas/carmen.png" alt="Carmen" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/casablanca.png" alt="" loading="lazy" />
+                <img src="img/marcas/casablanca.png" alt="Casablanca" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/colchagua.png" alt="" loading="lazy" />
+                <img src="img/marcas/colchagua.png" alt="Colchagua" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/ct.png" alt="" loading="lazy" />
+                <img src="img/marcas/ct.png" alt="Concha y Toro" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/em.png" alt="" loading="lazy" />
+                <img src="img/marcas/em.png" alt="Emiliana" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/d.png" alt="" loading="lazy" />
+                <img src="img/marcas/d.png" alt="Diablo" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/cdd.png" alt="" loading="lazy" />
+                <img src="img/marcas/cdd.png" alt="Casillero Del Diablo" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/mcc.png" alt="" loading="lazy" />
+                <img src="img/marcas/mcc.png" alt="Marques de Casa Concha" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/t3.png" alt="" loading="lazy" />
+                <img src="img/marcas/t3.png" alt="Trio" loading="lazy" />
               </div>
             </div>
           </div>
@@ -256,11 +258,11 @@
         <div class="menu">
           <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="categorias.html">Tintos</a></li>
-            <li><a href="#">Blancos</a></li>
-            <li><a href="#">Ensamblajes</a></li>
-            <li><a href="#">Espumantes</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="pages/categorias.html">Tintos</a></li>
+            <li><a href="pages/categorias.html">Blancos</a></li>
+            <li><a href="pages/categorias.html">Ensamblajes</a></li>
+            <li><a href="pages/categorias.html">Espumantes</a></li>
+            <li><a href="pages/categorias.html">Contacto</a></li>
           </ul>
         </div>
         <div class="pago">
@@ -286,6 +288,6 @@
           </div>
         </div>
       </footer>
-    </div>
+    </main>
   </body>
 </html>
