--- a/pages/carro.html
+++ b/pages/carro.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Viña Volchagua - Descubre Viña Colchagua">
+    <meta name="keywords" content="Tintos, Blancos, Ensamblajes, Espumantes">
     <title>Carro de Compras - Viña Colchagua</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,36 +24,36 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
   </head>
   <body>
-    <div class="main">
+    <main class="main">
       <header>
         <div class="header">
           <div class="logo">
-            <a href="index.html"
-              ><img src="img/logo.png" alt="Viña Colchagua"
+            <a href="../index.html"
+              ><img src="../img/logo.png" alt="Viña Colchagua"
             /></a>
           </div>
           <nav class="menu">
             <ul>
-              <li><a href="#">Inicio</a></li>
+              <li><a href="../index.html">Inicio</a></li>
               <li><a href="categorias.html">Tintos</a></li>
-              <li><a href="#">Blancos</a></li>
-              <li><a href="#">Ensamblajes</a></li>
-              <li><a href="#">Espumantes</a></li>
-              <li><a href="#">Contacto</a></li>
+              <li><a href="categorias.html">Blancos</a></li>
+              <li><a href="categorias.html">Ensamblajes</a></li>
+              <li><a href="categorias.html">Espumantes</a></li>
+              <li><a href="categorias.html">Contacto</a></li>
             </ul>
           </nav>
           <div class="sesion">
             <div>
               <a href="carro.html"
-                ><img src="img/shopping_cart.png" alt=""
+                ><img src="../img/shopping_cart.png" alt=""
               /></a>
             </div>
             <div><span>0</span></div>
             <div>
-              <a href="#"><img src="img/person_outline.png" alt="" /></a>
+              <a href="#"><img src="../img/person_outline.png" alt="" /></a>
             </div>
           </div>
           <div class="navbar navbar-light bg-white">
@@ -74,32 +76,32 @@
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link" href="#"
-                    ><img src="img/person_outline.png" alt="" />Iniciar
+                    ><img src="../img/person_outline.png" alt="" />Iniciar
                     sesión</a
                   >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="carro.html"
-                    ><img src="img/shopping_cart.png" alt="" />0 productos</a
+                    ><img src="../img/shopping_cart.png" alt="" />0 productos</a
                   >
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="categorias.html">Tintos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Blancos</a>
+                  <a class="nav-link" href="categorias.html">Blancos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Ensamblajes</a>
+                  <a class="nav-link" href="categorias.html">Ensamblajes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Espumantes</a>
+                  <a class="nav-link" href="categorias.html">Espumantes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
+                  <a class="nav-link" href="categorias.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -107,16 +109,16 @@
         </nav>
       </header>
       <section class="breadcrumbs">
-        <a href="index.html">Inicio</a> / Carro de Compras</section>
+        <a href="../index.html">Inicio</a> / Carro de Compras</section>
 
       <section class="lista_carro">
         <div class="detalle_carro">
           <div class="foto_producto_carro">
-            <img src="img/vino_01.png" alt="" />
+            <img src="../img/vino_01.png" alt="" />
           </div>
           <div class="elementos_producto">
             <div class="titulo">
-              <span class="">Miguel Torres Gran Reserva Cabernet Sauvignon</span>
+              <p class="">Miguel Torres Gran Reserva Cabernet Sauvignon</p>
             </div>
             <div class="cantidad_carro">
               <div class="cantidad">
@@ -157,11 +159,11 @@
         </div>
         <div class="detalle_carro">
           <div class="foto_producto_carro">
-            <img src="img/vino_01.png" alt="" />
+            <img src="../img/vino_01.png" alt="" />
           </div>
           <div class="elementos_producto">
             <div class="titulo">
-              <span class="">Miguel Torres Gran Reserva Cabernet Sauvignon</span>
+              <p class="">Miguel Torres Gran Reserva Cabernet Sauvignon</p>
             </div>
             <div class="cantidad_carro">
               <div class="cantidad">
@@ -208,37 +210,37 @@
           <div class="slider">
             <div class="slide-track-1">
               <div class="slide">
-                <img src="img/marcas/cs.png" alt="" loading="lazy" />
+                <img src="../img/marcas/cs.png" alt="Casa Silva" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/bta.png" alt="" loading="lazy" />
+                <img src="../img/marcas/bta.png" alt="Bodega Trivento Argentina" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/carmen.png" alt="" loading="lazy" />
+                <img src="../img/marcas/carmen.png" alt="Carmen" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/casablanca.png" alt="" loading="lazy" />
+                <img src="../img/marcas/casablanca.png" alt="Casablanca" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/colchagua.png" alt="" loading="lazy" />
+                <img src="../img/marcas/colchagua.png" alt="Colchagua" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/ct.png" alt="" loading="lazy" />
+                <img src="../img/marcas/ct.png" alt="Concha y Toro" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/em.png" alt="" loading="lazy" />
+                <img src="../img/marcas/em.png" alt="Emiliana" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/d.png" alt="" loading="lazy" />
+                <img src="../img/marcas/d.png" alt="Diablo" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/cdd.png" alt="" loading="lazy" />
+                <img src="../img/marcas/cdd.png" alt="Casillero Del Diablo" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/mcc.png" alt="" loading="lazy" />
+                <img src="../img/marcas/mcc.png" alt="Marques de Casa Concha" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/t3.png" alt="" loading="lazy" />
+                <img src="../img/marcas/t3.png" alt="Trio" loading="lazy" />
               </div>
             </div>
           </div>
@@ -246,41 +248,41 @@
       </section>
       <footer class="footer">
         <div class="logo">
-          <a href="index.html"><img src="img/logo_footer.png" alt="Viña Colchagua" /></a>
+          <a href="../index.html"><img src="../img/logo_footer.png" alt="Viña Colchagua" /></a>
         </div>
         <div class="menu">
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="categorias.html">Tintos</a></li>
-            <li><a href="#">Blancos</a></li>
-            <li><a href="#">Ensamblajes</a></li>
-            <li><a href="#">Espumantes</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="categorias.html">Blancos</a></li>
+            <li><a href="categorias.html">Ensamblajes</a></li>
+            <li><a href="categorias.html">Espumantes</a></li>
+            <li><a href="categorias.html">Contacto</a></li>
           </ul>
         </div>
         <div class="pago">
           <div class="ml">
-            <img src="img/mercado-pago.png" alt="Mercado Pago" />
+            <img src="../img/mercado-pago.png" alt="Mercado Pago" />
           </div>
           <div class="wp">
-            <img src="img/webpay-plus.png" alt="Webpay Plus" />
+            <img src="../img/webpay-plus.png" alt="Webpay Plus" />
           </div>
         </div>
         <div class="rrss">
           <div>
-            <a href="#"><img src="img/instagram.png" alt="Instagram" /></a>
+            <a href="#"><img src="../img/instagram.png" alt="Instagram" /></a>
           </div>
           <div>
-            <a href="#"><img src="img/twitter.png" alt="Twitter" /></a>
+            <a href="#"><img src="../img/twitter.png" alt="Twitter" /></a>
           </div>
           <div>
-            <a href="#"><img src="img/fb.png" alt="Facebook" /></a>
+            <a href="#"><img src="../img/fb.png" alt="Facebook" /></a>
           </div>
           <div>
-            <a href="#"><img src="img/whatsapp.png" alt="Whatsapp" /></a>
+            <a href="#"><img src="../img/whatsapp.png" alt="Whatsapp" /></a>
           </div>
         </div>
       </footer>
-    </div>
+    </main>
   </body>
 </html>
