--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Viña Volchagua - Descubre Viña Colchagua">
+    <meta name="keywords" content="Tintos, Blancos, Ensamblajes, Espumantes">
     <title>Tintos - Viña Colchagua</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,36 +24,36 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
   </head>
   <body>
-    <div class="main">
+    <main class="main">
       <header>
         <div class="header">
           <div class="logo">
-            <a href="index.html"
-              ><img src="img/logo.png" alt="Viña Colchagua"
+            <a href="../index.html"
+              ><img src="../img/logo.png" alt="Viña Colchagua"
             /></a>
           </div>
           <nav class="menu">
             <ul>
-              <li><a href="index.html">Inicio</a></li>
+              <li><a href="../index.html">Inicio</a></li>
               <li><a href="categorias.html">Tintos</a></li>
-              <li><a href="#">Blancos</a></li>
-              <li><a href="#">Ensamblajes</a></li>
-              <li><a href="#">Espumantes</a></li>
-              <li><a href="#">Contacto</a></li>
+              <li><a href="categorias.html">Blancos</a></li>
+              <li><a href="categorias.html">Ensamblajes</a></li>
+              <li><a href="categorias.html">Espumantes</a></li>
+              <li><a href="categorias.html">Contacto</a></li>
             </ul>
           </nav>
           <div class="sesion">
             <div>
               <a href="carro.html"
-                ><img src="img/shopping_cart.png" alt=""
+                ><img src="../img/shopping_cart.png" alt=""
               /></a>
             </div>
             <div><span>0</span></div>
             <div>
-              <a href="#"><img src="img/person_outline.png" alt="" /></a>
+              <a href="#"><img src="../img/person_outline.png" alt="" /></a>
             </div>
           </div>
           <div class="navbar navbar-light bg-white">
@@ -74,32 +76,32 @@
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link" href="#"
-                    ><img src="img/person_outline.png" alt="" />Iniciar
+                    ><img src="../img/person_outline.png" alt="" />Iniciar
                     sesión</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="carro.html"
-                    ><img src="img/shopping_cart.png" alt="" />0 productos</a
+                  <a class="nav-link" href="pages/carro.html"
+                    ><img src="../img/shopping_cart.png" alt="" />0 productos</a
                   >
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="categorias.html">Tintos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Blancos</a>
+                  <a class="nav-link" href="categorias.html">Blancos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Ensamblajes</a>
+                  <a class="nav-link" href="categorias.html">Ensamblajes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Espumantes</a>
+                  <a class="nav-link" href="categorias.html">Espumantes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
+                  <a class="nav-link" href="categorias.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -107,12 +109,12 @@
         </nav>
       </header>
       <section class="breadcrumbs">
-        <a href="index.html">Inicio</a> / Tintos
+        <a href="../index.html">Inicio</a> / Tintos
       </section>
       <section class="categoria_grilla">
         <div class="menu_categoria">
           <div class="list-group">
-            <a href="#" class="list-group-item principal">Tintos</a>
+            <a href="#" class="list-group-item principal"><h4>Tintos</h4></a>
             <div class="list-group">
               <a href="#" class="list-group-item">Cabernet Sauvignon (18)</a>
               <a href="#" class="list-group-item">Carmenere (13)</a>
@@ -132,14 +134,14 @@
           </div>
         </div>
         <div class="ofertas">
-          <div class="texto_seccion"><span>Tintos</span></div>
+          <div class="texto_seccion"><span><h4>Tintos</h4></span></div>
           <div class="contenedor_categoria">
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_01.png" alt="" />
+                <img src="../img/vino_01.png" alt="" />
               </div>
-              <span class="texto_producto_categoria"
-                >Miguel Torres Gran Reserva Cabernet Sauvignon</span
+              <p class="texto_producto_categoria"
+                >Miguel Torres Gran Reserva Cabernet Sauvignon</p
               >
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
@@ -149,9 +151,9 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_02.png" alt="" />
+                <img src="../img/vino_02.png" alt="" />
               </div>
-              <span class="texto_producto_categoria">Salvaje Syrah</span>
+              <p class="texto_producto_categoria">Salvaje Syrah</p>
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
                 <span class="precio">$6.570</span>
@@ -160,10 +162,10 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_03.png" alt="" />
+                <img src="../img/vino_03.png" alt="" />
               </div>
-              <span class="texto_producto_categoria"
-                >Vino Orgánico Veramonte Reserva Cepas</span
+              <p class="texto_producto_categoria"
+                >Vino Orgánico Veramonte Reserva Cepas</p
               >
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
@@ -173,10 +175,10 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_01.png" alt="" />
+                <img src="../img/vino_01.png" alt="" />
               </div>
-              <span class="texto_producto_categoria"
-                >Miguel Torres Gran Reserva Cabernet Sauvignon</span
+              <p class="texto_producto_categoria"
+                >Miguel Torres Gran Reserva Cabernet Sauvignon</p
               >
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
@@ -186,9 +188,9 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_02.png" alt="" />
+                <img src="../img/vino_02.png" alt="" />
               </div>
-              <span class="texto_producto_categoria">Salvaje Syrah</span>
+              <p class="texto_producto_categoria">Salvaje Syrah</p>
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
                 <span class="precio">$6.570</span>
@@ -197,10 +199,10 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_03.png" alt="" />
+                <img src="../img/vino_03.png" alt="" />
               </div>
-              <span class="texto_producto_categoria"
-                >Miguel Torres Gran Reserva Cabernet Sauvignon</span
+              <p class="texto_producto_categoria"
+                >Miguel Torres Gran Reserva Cabernet Sauvignon</p
               >
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
@@ -210,10 +212,10 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_02.png" alt="" />
+                <img src="../img/vino_02.png" alt="" />
               </div>
-              <span class="texto_producto_categoria"
-                >Vino Orgánico Veramonte Reserva Cepas</span
+              <p class="texto_producto_categoria"
+                >Vino Orgánico Veramonte Reserva Cepas</p
               >
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
@@ -223,10 +225,10 @@
             </div>
             <div class="oferta">
               <div class="foto_producto">
-                <img src="img/vino_03.png" alt="" />
+                <img src="../img/vino_03.png" alt="" />
               </div>
-              <span class="texto_producto_categoria"
-                >Vino Orgánico Veramonte Reserva Cepas</span
+              <p class="texto_producto_categoria"
+                >Vino Orgánico Veramonte Reserva Cepas</p
               >
               <div class="texto_precio">
                 <span class="texto">Precio:</span>
@@ -243,37 +245,37 @@
           <div class="slider">
             <div class="slide-track-1">
               <div class="slide">
-                <img src="img/marcas/cs.png" alt="" loading="lazy" />
+                <img src="../img/marcas/cs.png" alt="Casa Silva" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/bta.png" alt="" loading="lazy" />
+                <img src="../img/marcas/bta.png" alt="Bodega Trivento Argentina" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/carmen.png" alt="" loading="lazy" />
+                <img src="../img/marcas/carmen.png" alt="Carmen" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/casablanca.png" alt="" loading="lazy" />
+                <img src="../img/marcas/casablanca.png" alt="Casablanca" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/colchagua.png" alt="" loading="lazy" />
+                <img src="../img/marcas/colchagua.png" alt="Colchagua" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/ct.png" alt="" loading="lazy" />
+                <img src="../img/marcas/ct.png" alt="Concha y Toro" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/em.png" alt="" loading="lazy" />
+                <img src="../img/marcas/em.png" alt="Emiliana" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/d.png" alt="" loading="lazy" />
+                <img src="../img/marcas/d.png" alt="Diablo" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/cdd.png" alt="" loading="lazy" />
+                <img src="../img/marcas/cdd.png" alt="Casillero Del Diablo" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/mcc.png" alt="" loading="lazy" />
+                <img src="../img/marcas/mcc.png" alt="Marques de Casa Concha" loading="lazy" />
               </div>
               <div class="slide">
-                <img src="img/marcas/t3.png" alt="" loading="lazy" />
+                <img src="../img/marcas/t3.png" alt="Trio" loading="lazy" />
               </div>
             </div>
           </div>
@@ -282,43 +284,43 @@
 
       <footer class="footer">
         <div class="logo">
-          <a href="index.html"
-            ><img src="img/logo_footer.png" alt="Viña Colchagua"
+          <a href="../index.html"
+            ><img src="../img/logo_footer.png" alt="Viña Colchagua"
           /></a>
         </div>
         <div class="menu">
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="categorias.html">Tintos</a></li>
-            <li><a href="#">Blancos</a></li>
-            <li><a href="#">Ensamblajes</a></li>
-            <li><a href="#">Espumantes</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="categorias.html">Blancos</a></li>
+            <li><a href="categorias.html">Ensamblajes</a></li>
+            <li><a href="categorias.html">Espumantes</a></li>
+            <li><a href="categorias.html">Contacto</a></li>
           </ul>
         </div>
         <div class="pago">
           <div class="ml">
-            <img src="img/mercado-pago.png" alt="Mercado Pago" />
+            <img src="../img/mercado-pago.png" alt="Mercado Pago" />
           </div>
           <div class="wp">
-            <img src="img/webpay-plus.png" alt="Webpay Plus" />
+            <img src="../img/webpay-plus.png" alt="Webpay Plus" />
           </div>
         </div>
         <div class="rrss">
           <div>
-            <a href="#"><img src="img/instagram.png" alt="Instagram" /></a>
+            <a href="#"><img src="../img/instagram.png" alt="Instagram" /></a>
           </div>
           <div>
-            <a href="#"><img src="img/twitter.png" alt="Twitter" /></a>
+            <a href="#"><img src="../img/twitter.png" alt="Twitter" /></a>
           </div>
           <div>
-            <a href="#"><img src="img/fb.png" alt="Facebook" /></a>
+            <a href="#"><img src="../img/fb.png" alt="Facebook" /></a>
           </div>
           <div>
-            <a href="#"><img src="img/whatsapp.png" alt="Whatsapp" /></a>
+            <a href="#"><img src="../img/whatsapp.png" alt="Whatsapp" /></a>
           </div>
         </div>
       </footer>
-    </div>
+    </main>
   </body>
 </html>
