Correciones realizadas en base a comentarios de tutora Macarena - v02

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <ul>
               <li><a href="index.html">Inicio</a></li>
               <li><a href="pages/categorias.html">Tintos</a></li>
-              <li><a href="#">Blancos</a></li>
-              <li><a href="#">Ensamblajes</a></li>
-              <li><a href="#">Espumantes</a></li>
-              <li><a href="#">Contacto</a></li>
+              <li><a href="pages/categorias.html">Blancos</a></li>
+              <li><a href="pages/categorias.html">Ensamblajes</a></li>
+              <li><a href="pages/categorias.html">Espumantes</a></li>
+              <li><a href="pages/categorias.html">Contacto</a></li>
             </ul>
           </nav>
           <div class="sesion">
