Correciones realizadas en base a comentarios de tutora Macarena - v02

--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
                   <a class="nav-link" href="pages/categorias.html">Tintos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Blancos</a>
+                  <a class="nav-link" href="pages/categorias.html">Blancos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Ensamblajes</a>
+                  <a class="nav-link" href="pages/categorias.html">Ensamblajes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Espumantes</a>
+                  <a class="nav-link" href="pages/categorias.html">Espumantes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
+                  <a class="nav-link" href="pages/categorias.html">Contacto</a>
                 </li>
               </ul>
             </div>
